--- a/MyWalletSaver/Base.lproj/Main.storyboard
+++ b/MyWalletSaver/Base.lproj/Main.storyboard
@@ -820,14 +820,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="LABEL" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3w3-vc-e7G">
-                                <rect key="frame" x="0.0" y="283" width="600" height="34.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LABEL" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="560" translatesAutoresizingMaskIntoConstraints="NO" id="3w3-vc-e7G">
+                                <rect key="frame" x="20" y="283" width="560" height="34.5"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l3a-Tm-Qey">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l3a-Tm-Qey">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Epp-hb-bLZ">
@@ -843,7 +843,7 @@
                                             <action selector="rightButtonPressed:" destination="9pv-A4-QxB" eventType="touchUpInside" id="kTf-LQ-ovG"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uM0-Ke-jCU">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uM0-Ke-jCU">
                                         <rect key="frame" x="283.5" y="10" width="33" height="24"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="20"/>
@@ -865,18 +865,26 @@
                         <animations/>
                         <color key="backgroundColor" white="0.23184634200000001" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="l3a-Tm-Qey" secondAttribute="trailing" constant="-20" id="4K9-vc-eNC"/>
                             <constraint firstAttribute="bottom" secondItem="l3a-Tm-Qey" secondAttribute="bottom" constant="536" id="5Q7-nQ-9Kz"/>
                             <constraint firstAttribute="centerX" secondItem="3w3-vc-e7G" secondAttribute="centerX" id="647-7L-9lH"/>
                             <constraint firstAttribute="trailingMargin" secondItem="3w3-vc-e7G" secondAttribute="trailing" constant="-16" id="6QC-r0-Zdg"/>
+                            <constraint firstItem="3w3-vc-e7G" firstAttribute="leading" secondItem="MDr-vd-0Xr" secondAttribute="leadingMargin" id="T61-yM-tii"/>
                             <constraint firstItem="l3a-Tm-Qey" firstAttribute="top" secondItem="LMZ-dI-s1V" secondAttribute="bottom" id="amc-JN-ssf"/>
                             <constraint firstItem="l3a-Tm-Qey" firstAttribute="leading" secondItem="3w3-vc-e7G" secondAttribute="leading" id="aqp-c1-wDh"/>
+                            <constraint firstItem="3w3-vc-e7G" firstAttribute="trailing" secondItem="MDr-vd-0Xr" secondAttribute="trailingMargin" id="cIe-pa-gUW"/>
                             <constraint firstItem="l3a-Tm-Qey" firstAttribute="trailing" secondItem="3w3-vc-e7G" secondAttribute="trailing" id="e4l-C5-mj5"/>
                             <constraint firstAttribute="centerY" secondItem="3w3-vc-e7G" secondAttribute="centerY" id="hRB-ca-UmQ"/>
                             <constraint firstItem="3w3-vc-e7G" firstAttribute="leading" secondItem="MDr-vd-0Xr" secondAttribute="leadingMargin" constant="-16" id="khd-GQ-hZs"/>
+                            <constraint firstItem="l3a-Tm-Qey" firstAttribute="leading" secondItem="MDr-vd-0Xr" secondAttribute="leadingMargin" constant="-20" id="ovt-v6-ArN"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="5Q7-nQ-9Kz"/>
+                                <exclude reference="aqp-c1-wDh"/>
+                                <exclude reference="e4l-C5-mj5"/>
+                                <exclude reference="6QC-r0-Zdg"/>
+                                <exclude reference="khd-GQ-hZs"/>
                             </mask>
                         </variation>
                     </view>
