--- a/MyWalletSaver/Base.lproj/Main.storyboard
+++ b/MyWalletSaver/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -321,7 +321,6 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eG2-5e-2Q9" customClass="CustomCirclularButton" customModule="WalletTracker" customModuleProvider="target">
                                         <rect key="frame" x="77" y="5" width="55" height="55"/>
                                         <animations/>
-                                        <color key="backgroundColor" red="0.0" green="0.65098039220000004" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="55" id="ZVa-xe-D8S"/>
                                         </constraints>
@@ -515,13 +514,26 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eJa-a6-dIm">
+                                        <rect key="frame" x="8" y="5.5" width="68" height="33"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
+                                        <state key="normal" title="By Month">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="changePeriodButtonPressed:" destination="AYG-Hr-zBm" eventType="touchUpInside" id="8fH-lb-fQW"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <animations/>
                                 <color key="backgroundColor" red="0.0" green="0.65098039220000004" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="O3z-87-VX7"/>
                                     <constraint firstAttribute="centerX" secondItem="0xg-1q-c2e" secondAttribute="centerX" id="fPz-ln-wSB"/>
+                                    <constraint firstItem="eJa-a6-dIm" firstAttribute="centerY" secondItem="0xg-1q-c2e" secondAttribute="centerY" id="gu5-l8-td0"/>
                                     <constraint firstAttribute="centerY" secondItem="0xg-1q-c2e" secondAttribute="centerY" id="p8M-88-L1M"/>
+                                    <constraint firstItem="eJa-a6-dIm" firstAttribute="leading" secondItem="ram-un-czL" secondAttribute="leading" constant="8" id="xAJ-af-HM0"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="IeU-JY-vYx">
@@ -548,8 +560,8 @@
                                         <color key="textColor" red="0.0" green="0.61176470589999998" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Period: 1 November - 30 November" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGp-kQ-w8V">
-                                        <rect key="frame" x="173" y="8" width="254.5" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 November - 30 November" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGp-kQ-w8V">
+                                        <rect key="frame" x="200" y="8" width="200.5" height="20.5"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
                                         <color key="textColor" red="0.0" green="0.61176470589999998" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -591,7 +603,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q7Z-uJ-ioJ" customClass="CustomArrowButton" customModule="WalletTracker" customModuleProvider="target">
-                                        <rect key="frame" x="140" y="7" width="25" height="25"/>
+                                        <rect key="frame" x="167" y="7" width="25" height="25"/>
                                         <animations/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="25" id="QfO-mr-cor"/>
@@ -608,7 +620,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mOB-18-EBc" customClass="CustomArrowButton" customModule="WalletTracker" customModuleProvider="target">
-                                        <rect key="frame" x="435" y="7" width="25" height="25"/>
+                                        <rect key="frame" x="408" y="7" width="25" height="25"/>
                                         <animations/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="2is-eM-Sgg"/>
@@ -687,6 +699,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="History" image="second" id="Sll-bb-1Hv"/>
                     <connections>
+                        <outlet property="changePeriodButton" destination="eJa-a6-dIm" id="toG-iP-7UD"/>
                         <outlet property="periodLabel" destination="KGp-kQ-w8V" id="eWh-69-b2R"/>
                         <outlet property="rightArrowButton" destination="mOB-18-EBc" id="g9f-BQ-bPX"/>
                         <outlet property="tableView" destination="IeU-JY-vYx" id="uXt-fr-bRW"/>
